Kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: mlops
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80       # Port in the service
      targetPort: 8081 # Port in the pod
  type: NodePort
